# ShimmerChat

./: .gitignore  .gitmodules  AGENTS.md  README.md  README_EN.md  SHIMMERCHAT-2-PLAN-2.md  SHIMMERCHAT-2-PLAN.md  SHIMMERCHAT-2-STATUS-HUMAN.md  SHIMMERCHAT-2-STATUS.md  SHIMMERCHAT-2.md  ShimmerChat.sln  THEME.md  TestPlan.md  build-tauri.ps1  shimmer-art.blend  shimmer-art.blend1  version.json
Docs/: CustomAPI.md  KVDataStorage.md  NodeDevelopment.md  NodeEditorSystem.md  PipelineArchitecture.md  PluginDevelopment.md  PostRenderPipelines.md  PreGenerationPipeline.md  ThemeSystem.md
ShimmerChat/: HowToRun.txt  Program.cs  ShimmerChat.csproj  appsettings.json  enabled_tools.json
ShimmerChat.Tests/: ContextBuilderServiceV1Tests.cs  KVDataMigrationServiceTests.cs  LiteDBKVDataTests.cs  LocalFileStorageKVDataTests.cs  ShimmerChat.Tests.csproj
ShimmerChatBuiltin/: ApiConfig.cs  InvokeCSharp.cs  InvokeCSharpV2.cs  SetChatNameTool.cs  SetChatNameToolV2.cs  ShimmerChatBuiltin.csproj  Structure.md  Target.cs  _Imports.razor
ShimmerChatBuiltin.Tests/: GlobalUsings.cs  ShimmerChatBuiltin.Tests.csproj
ShimmerChatBuiltinTools/: InvokeCSharp.cs  ShimmerChatBuiltinTools.csproj
ShimmerChatLib.Tests/: AgentTests.cs  ChatTests.cs  ConfigurableChatClient.cs  GenerationTreeExecutorTests.cs  GlobalUsings.cs  MessageTests.cs  PseudoAPITests.cs  ShimmerChatLib.Tests.csproj  StubToolCallLoopHost.cs  (+1 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+403 files in other folders)
